# UIToolkit

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: DIContainer.hpp  Entity.hpp  IBindable.hpp  IEntity.hpp  IKeyboard.hpp  IMouse.hpp  IWindow.hpp  Keyboard.hpp  KeyboardDefinitions.hpp  Mouse.hpp  MouseDefinitions.hpp  Window.hpp  event.hpp
include/core/: Collider.hpp  IModel.hpp  Keyboard.hpp  MeshBase.hpp  Mouse.hpp  OpenGLHeaders.hpp  OpenglInit.hpp  Point.hpp  Window.hpp
include/core/primitives/: Rectangle.hpp
include/core/render/: Attribute.hpp  AttributeSetter.hpp  IMesh.hpp  IProgram.hpp  MeshAttributeSetters.hpp  Program.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp  Vertex.hpp  utils.hpp
include/events/: IUIEvent.hpp  KeyboardClick.hpp  MouseClick.hpp  MouseMove.hpp
include/utils/: error.hpp  glCheckError.hpp  printGlm.hpp  printUniforms.hpp  strfast.hpp
shaders/: MPandColor.glsl  coordAndColor.glsl  modelAndColor.glsl
src/: IBindable.cpp  glCheckError.cpp
src/core/: Keyboard.cpp  Mouse.cpp  Window.cpp
src/core/primitives/: Rectangle.cpp
src/core/render/: AttributeSetter.cpp  Mesh.cpp  MeshAttributeSetters.cpp  Program.cpp  Vertex.cpp
src/events/: KeyboardClick.cpp  MouseClick.cpp  MouseMove.cpp
tests/: CMakeLists.txt  modelAndProjection.cpp  modelTest.cpp  renderBox.cpp  window.cpp
